--- a/index.ipynb
+++ b/index.ipynb
@@ -69,9 +69,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "estimated revenue",
+         "text": [],
+         "type": "scatter",
+         "uid": "ecd58f2e-ca9d-11e8-a656-0242ac11002a",
+         "x": [
+          0,
+          150
+         ],
+         "y": [
+          0,
+          450
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Movie Spending and Revenue (in millions)"
+       }
+      },
+      "text/html": [
+       "<div id=\"aa71400a-548b-4157-b0b2-efb40fd61ec9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"aa71400a-548b-4157-b0b2-efb40fd61ec9\", [{\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"ece20cd6-ca9d-11e8-a656-0242ac11002a\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"aa71400a-548b-4157-b0b2-efb40fd61ec9\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"aa71400a-548b-4157-b0b2-efb40fd61ec9\", [{\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"ece20cd6-ca9d-11e8-a656-0242ac11002a\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from lib.graph import trace_values, plot, layout\n",
     "\n",
@@ -117,9 +152,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def y(x):\n",
     "    return x\n",
@@ -129,9 +175,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000000"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y(10000000)"
    ]
@@ -176,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,18 +243,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "90000000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y(30000000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y(0)"
    ]
@@ -271,9 +350,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "increased est. revenue",
+         "text": [],
+         "type": "scatter",
+         "uid": "4c5c72e6-ca9e-11e8-a656-0242ac11002a",
+         "x": [
+          0,
+          150
+         ],
+         "y": [
+          50,
+          500
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "estimated revenue",
+         "text": [],
+         "type": "scatter",
+         "uid": "4c5c76ba-ca9e-11e8-a656-0242ac11002a",
+         "x": [
+          0,
+          150
+         ],
+         "y": [
+          0,
+          450
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Movie Spending and Revenue (in millions)"
+       }
+      },
+      "text/html": [
+       "<div id=\"cb757e53-833d-4d69-bc34-bdeaa9ab4096\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cb757e53-833d-4d69-bc34-bdeaa9ab4096\", [{\"mode\": \"lines\", \"name\": \"increased est. revenue\", \"text\": [], \"x\": [0, 150], \"y\": [50, 500], \"type\": \"scatter\", \"uid\": \"4c64abb4-ca9e-11e8-a656-0242ac11002a\"}, {\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"4c64afba-ca9e-11e8-a656-0242ac11002a\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"cb757e53-833d-4d69-bc34-bdeaa9ab4096\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"cb757e53-833d-4d69-bc34-bdeaa9ab4096\", [{\"mode\": \"lines\", \"name\": \"increased est. revenue\", \"text\": [], \"x\": [0, 150], \"y\": [50, 500], \"type\": \"scatter\", \"uid\": \"4c64abb4-ca9e-11e8-a656-0242ac11002a\"}, {\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"4c64afba-ca9e-11e8-a656-0242ac11002a\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "regression_trace_increased = trace_values([0, 150], [50, 500], mode = 'lines', name = 'increased est. revenue')\n",
     "plot([regression_trace_increased, regression_trace], movie_layout)"
@@ -334,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
